dev/manifests/cluster-config/mutating.node.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "webhook-node.acme.com"
webhooks:
  - name: "webhook-node.acme.com"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["UPDATE"]
        resources: ["nodes/status"]
    clientConfig:
      service:
        namespace: default
        name: simple-kubernetes-webhook
        path: /mutate-nodes
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURaRENDQWt5Z0F3SUJBZ0lVSHlQUVc0N0ZTVDFKRFhUT1pmejF2Z1Naa2JRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd01URUxNQWtHQTFVRUJoTUNRVlV4SWpBZ0JnTlZCQU1NR1hOcGJYQnNaUzFyZFdKbGNtNWxkR1Z6TFhkbApZbWh2YjJzd0hoY05NalV3T1RBNU1USXdNelV3V2hjTk1qWXdPVEE1TVRJd016VXdXakF4TVFzd0NRWURWUVFHCkV3SkJWVEVpTUNBR0ExVUVBd3daYzJsdGNHeGxMV3QxWW1WeWJtVjBaWE10ZDJWaWFHOXZhekNDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSmt4WU1tMU9pc0s0V25IYUk5UlpLYnN2Ujl0NWVVZApIb0NDSTFLQnRLcm5kN05G [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
